TableHeader: fix padding of last column
The last column has a larger padding at the right side to make room for
the scrollbar. Starting with Scout 9, the LESS variable @scrollbar-size
already includes the scrollbar padding, therefore it must not be added
again.

This padding is now applied to the header cell as well to properly align
the content with the cell content. This is mostly visible for centered
or right-aligned columns.

Add a special CSS class to header cells that only contain icons to
prevent unwanted ellipsis in very narrow columns (IconColumn).

Reviewed-on: https://git.eclipse.org/r/151613
Tested-by: CI Bot

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.less
@@ -233,7 +233,7 @@
   &.last.halign-left,
   &.last.halign-center,
   &.last.halign-right {
-    padding-right: @scrollbar-size + (@scrollbar-side-padding * 2);
+    padding-right: @table-cell-padding-right-last;
   }
 
   .table:not(.disabled) > .table-data > .table-row:not(.disabled) > &.editable::before {
